test: Enhance test with mocking for Randoms.pickNumberInRange
assertRandomNumberInRangeTest를 이용해 무작위 값을 고정한다.
무작위 값을 고정해 원하는 테스트 데이터를 생성하고 AssertJ와 JUnit을 이용해 검증한다.

Closes