@@ -1,17 +1,16 @@
 package racingcar;
 
+import static camp.nextstep.edu.missionutils.test.Assertions.assertRandomNumberInRangeTest;
+
 import java.util.Arrays;
-import java.util.List;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
+import racingcar.accelerator.BrokenAccelerator;
 
 class CarGroupTest {
 
-    private Car createCarWithMileage(String name, int mileage) {
-        Car car = new Car(name);
-        car.setMileageForTest(mileage);
-        return car;
-    }
+    private static final int MOVING_FORWARD = 4;
+    private static final int STOP = 3;
 
     @Test
     public void 자동차이름목록_쉼표기준분리_5글자이하_테스트() throws Exception {
@@ -45,35 +44,42 @@ class CarGroupTest {
 
     @Test
     public void 가장_멀리_전진한_자동차_테스트() throws Exception {
-        //Given
-        Car pobi = createCarWithMileage("pobi", 10);
-        Car woni = createCarWithMileage("woni", 5);
-        Car jun = createCarWithMileage("jun", 0);
-        CarGroup carGroup = new CarGroup(Arrays.asList(pobi, woni, jun));
-        List<Car> expected = List.of(pobi);
+
+        // Given
+        CarGroup carGroup = new CarGroup(Arrays.asList(new Car("pobi"), new Car("woni")));
+        assertRandomNumberInRangeTest(
+                () -> {
+                    carGroup.accelerateAll(new BrokenAccelerator());
+                },
+                MOVING_FORWARD, STOP
+        );
+        int expected = 1;
 
         // When
-        List<Car> actual = carGroup.getLongestMileageCars();
+        int actual = carGroup.getLongestMileageCars().size();
 
-        //Then
-        Assertions.assertThat(actual).containsExactlyElementsOf(expected);
+        // Then
+        Assertions.assertThat(actual).isEqualTo(expected);
     }
 
     @Test
     public void 가장_멀리_전진한_여러_자동차_테스트() throws Exception {
-        //Given
-        Car pobi = createCarWithMileage("pobi", 10);
-        Car woni = createCarWithMileage("woni", 10);
-        Car jun = createCarWithMileage("jun", 10);
-        CarGroup carGroup = new CarGroup(Arrays.asList(pobi, woni, jun));
-        List<Car> expected = List.of(pobi, woni, jun);
+
+        // Given
+        CarGroup carGroup = new CarGroup(Arrays.asList(new Car("pobi"), new Car("woni")));
+        assertRandomNumberInRangeTest(
+                () -> {
+                    carGroup.accelerateAll(new BrokenAccelerator());
+                },
+                MOVING_FORWARD, MOVING_FORWARD
+        );
+
+        int expected = 2;
 
         // When
-        List<Car> actual = carGroup.getLongestMileageCars();
+        int actual = carGroup.getLongestMileageCars().size();
 
-        //Then
-        Assertions.assertThat(actual).containsExactlyElementsOf(expected);
+        // Then
+        Assertions.assertThat(actual).isEqualTo(expected);
     }
-
-
 }
